--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>PHOENIX GYM</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="principal.css">
+        <link rel="stylesheet" href="css/principal.css">
 </head>
 
 <body class="fondo-principal">
@@ -41,7 +41,8 @@
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">LOG IN</button>
+                <!-- <button  id="botonLogIn"class="btn btn-outline-success my-2 my-sm-0" type="submit">LOG IN</button> -->
+                <a id="botonLogin" class="btn btn-outline-success my-2 my-sm-0" type="submit" href="loginUser.html">LOG IN</a>
             </form>
         </div>
     </nav>
