--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
         <div class=" d-flex row m-0 "
             style="justify-content: space-around;  text-align: center;  color: brown; padding: 0px;">
             <div class="col">
-                <i class="fas fa-dumbbell" style="font-size: 105px; "></i>
-                <h2>algo</h2>
-                <i class="fas fa-heartbeat" style="font-size: 105px;"></i>
-                <h2>Cuidamos tu salud</h2>
+                <i class="fas fa-dumbbell" style="font-size: 105px; margin-bottom: 2 rem;"></i>
+                <h2>Tu día a día</h2>
+                <i class="fas fa-hot-tub" style="font-size: 105px; margin-bottom: 2 rem;"></i>
+                <h2>Sauna</h2>
 
             </div>
             <div class="col">
@@ -158,9 +158,9 @@
             </div> -->
             <div class="col">
                 <i class="fas fa-user-friends" style="font-size: 105px;"></i>
-                <h2>Soporte</h2>
+                <h2>Comunidad</h2>
                 <i class="fas fa-utensils" style="font-size: 105px;"></i>
-                <h2>Nutrición personalida</h2>
+                <h2>Nutrición personalizada</h2>
             </div>
             <!-- <div>
             </div> -->
