--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
         <div class="d-flex justify-content-around">
             <a href="" class="btn btn-secondary color-boton" style="list-style:none;" data-toggle="modal"
-                data-target="#modalLoginUser">Log In</a>
+                data-target="#modalLoginUser" onclick="">Log In</a>
         </div>
         <!-- <a  type ="button" onclick="iniciarSesion()" data-toggle="modal" href="#modalLoginUser"> sdds</a> -->
     </nav>
@@ -128,7 +128,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <a  type="button" class="btn btn-primary">Ingresar</a>
+                    <a  type="button" class="btn btn-primary" onclick=" iniciarSesion()">Ingresar</a>
                 </div>
             </div>
         </div>
