--- a/reservarClase.html
+++ b/reservarClase.html
@@ -147,6 +147,7 @@
   <script src="js/moment-develop/moment.js"></script>
   <script>listarActividades()</script>
   <script>listarTipoActividades()</script>
+  <script>eliminarIdUsuario()</script>
 
 </body>
 
