--- a/formularioAdmin.html
+++ b/formularioAdmin.html
@@ -8,16 +8,18 @@
     <title>FormularioUsuario</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/formulariosadmin.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans|Roboto+Slab&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
 
-    <!--NavBar inicio-->
-    <ul class="nav nav-tabs bg-danger" id="myTab" role="tablist">
+  
+    <ul class="nav nav-tabs bg-dark" id="myTab" role="tablist">
         <li class="nav-item">
             <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
-                aria-selected="true">Home</a>
+                aria-selected="true">Crear Usuario</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
@@ -34,13 +36,19 @@
     </ul>
     <!--Fin navBar-->
     <div class="container">
-        <div class="tab-content" id="myTabContent">
+        <div class="agregarUsuario tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-                <form>
+                <form class="formUser">
                     <div class="row form-group">
                         <label for="Nombre" class="col-form-label col-md-4">Nombre</label>
                         <div class="col-md-8">
                             <input type="text" name="Nombre" value="" id="userName" class="form-control">
+                        </div>
+                    </div>
+                    <div class="row form-group">
+                        <label for="Apellido" class="col-form-label col-md-4">Apellido</label>
+                        <div class="col-md-8">
+                            <input type="text" name="Nombre" value="" id="lastnameuser" class="form-control">
                         </div>
                     </div>
                     <div class="row form-group">
@@ -56,7 +64,7 @@
                         </div>
                     </div>
                     <div class="row form-group">
-                        <label for="dni" class="col-form-label col-md-4">Address</label>
+                        <label for="dni" class="col-form-label col-md-4">Direccion</label>
                         <div class="col-md-8">
                             <input type="text" name="dni" value="" id="userAddress" class="form-control">
                         </div>
@@ -74,6 +82,7 @@
                         <thead>
                             <tr>
                                 <th scope="col">Nombre</th>
+                                <th scope="col">Apellido</th>
                                 <th scope="col">DNI</th>
                                 <th scope="col"></th>
                             </tr>
@@ -83,7 +92,7 @@
                 </div>
             </div>
             <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-                <form>
+                <form class="formActividad">
                     <div class="row form-group">
                         <label for="actividad" class="col-form-label col-md-4">Actividad</label>
                         <div class="col-md-8">
