Agrego cambios en principial y pagina de aministrador

--- a/reservarClase.html
+++ b/reservarClase.html
@@ -81,7 +81,7 @@
     <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
 
       <div class="table-responsive col-md-8 mt-2 ml-auto mr-auto">
-        <table class="table  ">
+        <table class="table">
           <thead>
             <tr>
               <th scope="col">Dia</th>
@@ -152,7 +152,7 @@
     </div>
   </div>
 
-  <!-- Alert de usuario suspendido-->
+  <!-- Modal de usuario suspendido-->
   <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" id="modalusuariosuspendido"aria-labelledby="mySmallModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-sm" role="document">
       <div class="modal-content">
