--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/principal.css">
+    <link rel="stylesheet" href="css/footer.css">
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans|Roboto+Slab&display=swap" rel="stylesheet">
@@ -15,13 +17,13 @@
 </head>
 
 <body>
-
-
+    
     <div class="header-page">
         <div class="logo row">
-            <img src="img/origamifenix.jpg" alt="..." class="rounded-circle m-auto my-2">
+            <img src="img/origamifenix.jpg" alt="..." class="rounded-circle m-auto">
         </div>
     </div>
+
 
     <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="#">INICIO</a>
@@ -37,104 +39,97 @@
             </div>
         </div>
         <div class="d-flex justify-content-around">
-            <a href="" class="btn btn-secondary color-boton" style="list-style:none;" data-toggle="modal"
-                data-target="#modalLoginUser">Log In</a>
+
+            <div class="btn-group">
+                <a type="button" class="login-boton btn btn-danger" data-toggle="modal"
+                    data-target="#modalLoginUser">Log In</a>
+
+                <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown">
+                    <span class="caret"></span>
+                    <span class="sr-only">Desplegar menú</span>
+                </button>
+
+                <ul class="dropdown-menu" role="menu">
+                    <li><a href="#">Cerrar Sesión</a></li>
+                    <li><a href="admin.html">Ingresar como administrador</a></li>
+                </ul>
+            </div>
+            <!-- <a href="" class="login-boton btn btn-secondary color-boton" data-toggle="modal"
+                data-target="#modalLoginUser">Log In</a> -->
         </div>
     </nav>
 
-
-
-    <div id="carouselExampleControls" class="carousel slide m-auto" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="img/peligrospinning-t.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="img/reebok-fitness-training-crossfit-2.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="img/unnamed.jpg" class="d-block w-100" alt="...">
+<div class="container">
+    <div class="card-group">
+        <div class="card">
+            <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                    additional content. This content is a little bit longer.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-
-    <!--modal ingreso de usuario-->
-    <div class="modal" tabindex="-1" role="dialog" id="modalLoginUser">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Modal title</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <form>
-                        <div class="form-row">
-                            <div class="col">
-                                <input id="nombreLoginUsuario" type="text" class="form-control"
-                                    placeholder="First name">
-                            </div>
-                            <div class="col">
-                                <input id="contraseñaLoginUsuario" type="password" class="form-control"
-                                    placeholder="password">
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" id="botonIniciarSesion"
-                        onclick="iniciarSesion()">Ingresar</button>
-                </div>
+        <div class="card">
+            <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
+                </p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                    additional content. This card has even longer content than the first to show that equal height
+                    action.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
         </div>
     </div>
-
-    <div class="container" style="margin-top: 160px;">
-
-        <hr>
-        <h1>Servicios</h1>
-        <hr>
-        <div class=" d-flex row m-0 "
-            style="justify-content: space-around;  text-align: center;  color: brown; padding: 0px;">
-            <div class="col">
-                <i class="fas fa-dumbbell m-3 fa-7x"></i>
-                <h2>Tu día a día</h2>
-                <i class="fas fa-hot-tub m-3 fa-7x"></i>
-                <h2>Sauna</h2>
-
-            </div>
-            <div class="col">
-                <i class="fas fa-swimming-pool m-3 fa-7x"></i>
-                <h2>Pileta</h2>
-                <i class="fas fa-heartbeat m-3 fa-7x"></i>
-                <h2>Cuidamos tu salud</h2>
-            </div>
-            <!-- <div>
-            </div> -->
-            <div class="col">
-                <i class="fas fa-user-friends m-3 fa-7x"></i>
-                <h2>Comunidad</h2>
-                <i class="fas fa-utensils m-3 fa-7x"></i>
-                <h2>Nutrición</h2>
-            </div>
-            <!-- <div>
-            </div> -->
-
-        </div>
-
-    </div>
-
    
+</div>
+
+
+    <div class="container">
+        <div class="icons">
+            <hr>
+            <h1>Servicios</h1>
+            <hr>
+            <div class=" d-flex row m-0 "
+                style="justify-content: space-around;  text-align: center;  color: brown; padding: 0px;">
+                <div class="col">
+                    <i class="fas fa-dumbbell m-3 fa-7x"></i>
+                    <h2>Tu día a día</h2>
+                    <i class="fas fa-hot-tub m-3 fa-7x"></i>
+                    <h2>Sauna</h2>
+
+                </div>
+                <div class="col">
+                    <i class="fas fa-swimming-pool m-3 fa-7x"></i>
+                    <h2>Pileta</h2>
+                    <i class="fas fa-heartbeat m-3 fa-7x"></i>
+                    <h2>Cuidamos tu salud</h2>
+                </div>
+                <!-- <div>
+            </div> -->
+                <div class="col">
+                    <i class="fas fa-user-friends m-3 fa-7x"></i>
+                    <h2>Comunidad</h2>
+                    <i class="fas fa-utensils m-3 fa-7x"></i>
+                    <h2>Nutrición</h2>
+                </div>
+                <!-- <div>
+            </div> -->
+
+            </div>
+
+        </div>
+    </div>
+
 
     <footer class="footer">
         <div class="container">
@@ -174,6 +169,39 @@
     </footer>
 
 
+    <!--modal ingreso de usuario-->
+    <div class="modal" tabindex="-1" role="dialog" id="modalLoginUser">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <button data-dismiss="modal" class="close">&times;</button>
+                    <div class="containerlogin">
+                        <div class="form-container sign-in-container">
+                            <form action="#">
+                                <h1>Iniciar Sesión</h1>
+                                <input id="nombreLoginUsuario" type="text" placeholder="e-mail" />
+                                <input id="contraseñaLoginUsuario" type="password" placeholder="Password" />
+                                <a href="#">Recuperar contraseña</a>
+                                <button type="button" class="btn btn-primary" id="botonIniciarSesion"
+                                    onclick="iniciarSesion()">Ingresar</button>
+                            </form>
+                        </div>
+                        <div class="overlay-container">
+                            <div class="overlay">
+
+                                <div class="overlay-panel">
+                                    <h1>¡Bienvenido!</h1>
+                                    <p>¿No tienes una cuenta? Contactanos!</p>
+                                    <button class="ghost" id="signUp">Contacto</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -186,7 +214,7 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
     <script src="js/ventanaAdministrador.js"></script>
-    <script src="actividades.js"></script>
+    <script src="js/actividades.js"></script>
 
 
 </body>
