Agrego cambios en las condiciones para agregar un usuario y una clase

--- a/actividades.html
+++ b/actividades.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="actividades.html">Actividades </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="nutricion.html">Nutricion</a>
+                        <a class="nav-link" href="nutricion.html">Nutrición</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link " href="contacto.html" id="navbarDropdown" role="button" data-toggle=""
