--- a/formularioAdmin.html
+++ b/formularioAdmin.html
@@ -10,6 +10,7 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/formulariosadmin.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans|Roboto+Slab&display=swap" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css?family=PT+Sans|Roboto+Slab&display=swap" rel="stylesheet">
 
@@ -136,13 +137,16 @@
                     </table>
                 </div>
             </div>
-        </div>
-
-        <!--Collapse para el listado de inscriptos-->
-
-
-       
+        </div>       
     </div>
+
+    <footer class="footer">
+        <div class="container">
+            <p>Copyright &copy; 2020 All Rights Reserved by </p>
+            </div>
+        </div>
+    </footer>
+
 
     
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
