--- a/reservarClase.html
+++ b/reservarClase.html
@@ -9,177 +9,215 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans|Roboto+Slab&display=swap" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="css/principal.css"> -->
   <link rel="stylesheet" href="css/reservarClase.css">
-  
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+  integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
 </head>
 
-<body>
-  <div class="header-page">
-    <div class="logo row">
-      <img src="img/origamifenix.jpg" alt="logogym" class="rounded-circle m-auto my-2 p-0"
-        style="width: 200px;margin-left: 550px;">
-    </div>
-  </div>
-  <nav class="navbar navbar-expand-lg navbar-danger bg-danger">
-    <a class="navbar-brand" href="#">PHOENIX</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="#">Features</a>
-        <a class="nav-item nav-link" href="#">Pricing</a>
-        <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-      </div>
-    </div>
-    <div class="d-flex justify-content-around">
-      <button id="btnlogin" href="" class="btn btn-secondary color-boton" style="list-style:none;">Log In</button>
-    </div>
-    <!-- <a  type ="button" onclick="iniciarSesion()" data-toggle="modal" href="#modalLoginUser"> sdds</a> -->
-  </nav>
-<div class="container">
-<ul class="nav nav-tabs bg-danger" id="myTab" role="tablist" style="justify-content: center; ">
-    <li class="nav-item">
-      <a class="nav-link active " style="color: honeydew; " id="home-tab" data-toggle="tab" href="#home" role="tab"
-        aria-controls="home" aria-selected="true">Home</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" style="color: honeydew; " id="profile-tab" data-toggle="tab" href="#profile" role="tab"
-        aria-controls="profile" aria-selected="false">Profile</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" style="color: honeydew; " id="contact-tab" data-toggle="tab" href="#contact" role="tab"
-        aria-controls="contact" aria-selected="false">Contact</a>
-    </li>
+<nav class="navbar navbar-expand-lg">
+  <ul>
+    <li> <a class="navbar-brand" href="index.html">INICIO</a>
   </ul>
-</div>
-  <div class="row  py-5">
-    <div class="m-auto">
-      <button type="button" class="btn btn-outline-danger dropdown-toggle btn-responsive"
-        data-toggle="dropdown">Sedes</button>
-    </div>
-    <div class="m-auto">
-      <button type="button" class="btn btn-outline-danger dropdown-toggle btn-responsive"
-        data-toggle="dropdown">Actividades</button>
-      <ul class="dropdown-menu " id="listadoAct" role="menu">
+  <ul>
+    <li> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span></li>
+  </ul>
+
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="actividades.html">Actividades </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="nutricion.html">Nutrición</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link " href="contacto.html" id="navbarDropdown" role="button" data-toggle=""
+            aria-haspopup="true" aria-expanded="false">
+            Contacto
+          </a>
+
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <!-- <a class="dropdown-item" href="#">Sauna</a>
+                        <a class="dropdown-item" href="#">Pileta</a>
+                        <a class="dropdown-item" href="#">Tu día a día</a> -->
+          </diV>
+
+        </li>
       </ul>
     </div>
-    <div class="m-auto">
-      <button type="button" class="btn btn-outline-danger  btn-responsive ">Small button</button>
-    </div>
   </div>
+</nav>
 
 
-
-  <div class="tab-content ml-auto" id="myTabContent">
-    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-
-      <div class="table-responsive col-md-8 mt-2 ml-auto mr-auto">
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">Dia</th>
-              <th scope="col">Hora</th>
-              <th scope="col">Actividad</th>
-            </tr>
-          </thead>
-          <tbody id="tablaReservas"></tbody>
-        </table>
-      </div>
-
-
-
-    </div>
-    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
-    <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+<div class="header-page">
+  <div class="logo row">
+    <img src="img/origamifenix.jpg" alt="..." class="rounded-circle m-auto">
   </div>
+</div>
 
+<ul class="nav nav-tabs" id="myTab" role="tablist" style="justify-content: center; ">
+  <li class="nav-item">
+    <a class="nav-link active " id=" home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
+      aria-selected="true">Home</a>
+  </li>
 
-  <div class="container">
-
-    <div class="modal" tabindex="-1" role="dialog" id="modalReserva">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header  bg-danger">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body m-auto" id="modalBody">
-          </div>
-          <div class="modal-footer">
-            <div class="btn-group btn-group-lg" role="group" aria-label="...">
-              <button type="button" class="btn btn-primary btn-light " data-dismiss="modal">Cancelar</button>
-              <button id="botonConfirmar" type="button" class="btn btn-primary btn-light "
-                data-dismiss="modal">Confirmar</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+</ul>
+<div class="row py-5">
+  <div class="m-auto">
+    <button type="button" class="btn btn-outline-danger dropdown-toggle btn-responsive"
+      data-toggle="dropdown">Actividades</button>
+    <ul class="dropdown-menu " id="listadoAct" role="menu">
+    </ul>
   </div>
+</div>
 
-  <!--modal de cambio de contraseña-->
-  <div class="modal" tabindex="-1" role="dialog" id="modalcambiocontraseña">
+
+
+<div class="tab-content" id="myTabContent">
+  <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+
+    <div class="table-responsive col-md-8 mt-2 ml-auto mr-auto">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Dia</th>
+            <th scope="col">Hora</th>
+            <th scope="col">Actividad</th>
+          </tr>
+        </thead>
+        <tbody id="tablaReservas"></tbody>
+      </table>
+    </div>
+
+
+
+  </div>
+  <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
+  <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+</div>
+
+
+<div class="container modaldeclases">
+
+  <div class="modal" tabindex="-1" role="dialog" id="modalReserva">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Modal title</h5>
+        <div class="modal-header ">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body">
-          <form>
-            <div class="form-row">
-              <div class="col">
-                <input id="nuevacontaseña" type="text" class="form-control" placeholder="password">
-              </div>
-            </div>
-          </form>
+        <div class="modal-body m-auto" id="modalBody">
         </div>
         <div class="modal-footer">
-          <button id="guardarcontraseñanueva" type="button" class="btn btn-secondary"
-            data-dismiss="modal">Guardar</button>
+          <div class="btn-group btn-group-lg" role="group" aria-label="..." style="width: 100%;">
+            <button type="button" class="btn btn-primary btn-light " data-dismiss="modal">Cancelar</button>
+            <button id="botonConfirmar" type="button" class="btn btn-primary btn-light "
+              data-dismiss="modal">Confirmar</button>
+          </div>
         </div>
       </div>
     </div>
   </div>
+</div>
 
-  <!-- Alert de usuario suspendido-->
-  <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" id="modalusuariosuspendido"
-    aria-labelledby="mySmallModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-sm" role="document">
-      <div class="modal-content">
-        <div class="modal-body">
-          <h5><strong>Hubo un problema</strong></h5>
-          <a>
-            <h6>Contacta a un administrador</h6>
-          </a>
-          </p>
-        </div>
+<!--modal de cambio de contraseña-->
+<div class="modal" tabindex="-1" role="dialog" id="modalcambiocontraseña">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">CAMBIAR PASSWORD</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-row">
+            <div class="col">
+              <input id="nuevacontaseña" type="password" class="form-control" placeholder="password">
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button id="guardarcontraseñanueva" type="button" class="btn btn-secondary"
+          data-dismiss="modal">Guardar</button>
       </div>
     </div>
   </div>
+</div>
 
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"></script>
-  <script src="js/actividades.js"></script>
-  <script src="js/ventanaAdministrador.js"></script>
-  <script src="js/moment-develop/moment.js"></script>
-  <script>listarActividades()</script>
-  <script>listarTipoActividades()</script>
-  <script>cambiarcontraseña()</script>
+<!-- Alert de usuario suspendido-->
+<div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" id="modalusuariosuspendido"
+  aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-sm" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+        <h5><strong>Hubo un problema</strong></h5>
+        <a>
+          <h6>Contacta a un administrador y vuelve a iniciar sesión</h6>
+        </a>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+<footer class="footer">
+  <div class="container">
+      <div class="row">
+          <div class="col-sm-12  col-md-6">
+              <div class="informacion">
+                  <h5>Sobre nosotros</h5>
+                  <p>En Gimnasio Phoenix nos reinventamos cada día y creemos en la importancia de las personas,
+                      por
+                      eso contamos con el mejor equipo técnico como humano, el cual formamos continuamente para
+                      seguir estando en la vanguardia.</p>
+              </div>
+          </div>
+          <div class="col-sm-3 ">
+              <h5>Links</h5>
+              <div class="links">
+                  <li><a href="#">Politica de Cookies</a></li>
+                  <li><a href="#">Aviso Legal</a></li>
+                  <li><a href="#">Politica de Privacidad</a></li>
+              </div>
+          </div>
+          <div class="col-sm-3">
+              <div class="social-media">
+
+                  <h5>Redes</h5>
+                  <li><a class="facebook" href="#"><i class="fab fa-facebook fa-lg"></i></a></li>
+                  <li><a class="twitter" href="#"><i class="fab fa-twitter fa-lg"></i></a></li>
+                  <li><a class="instagram" href="#"><i class="fab fa-instagram fa-lg"></i></a></li>
+              </div>
+          </div>
+      </div>
+      <hr>
+      <p>Copyright &copy; 2020 All Rights Reserved by </p>
+  </div>
+</footer>
+
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+  integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+  integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+  integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script src="js/actividades.js"></script>
+<script src="js/ventanaAdministrador.js"></script>
+<script src="js/moment-develop/moment.js"></script>
+<script>listarActividades()</script>
+<script>listarTipoActividades()</script>
+<script>cambiarcontraseña()</script>
 
 </body>
 
