Añado iniciar sesion

--- a/reservarClase.html
+++ b/reservarClase.html
@@ -51,6 +51,14 @@
           </diV>
 
         </li>
+        <ul>
+          <li>
+              <div class=" botoninicio d-flex justify-content-around">
+                  <a type="button" href="index.html" class="nav-item nav-link active" data-toggle=""
+                      data-target="" onclick=" cerrarsesion()">Cerrar Sesión</a>
+              </div>
+          </li>
+      </ul>
       </ul>
     </div>
   </div>
