--- a/actividades.html
+++ b/actividades.html
@@ -60,7 +60,7 @@
                             <!-- <a class="dropdown-item" href="#">Sauna</a>
                             <a class="dropdown-item" href="#">Pileta</a>
                             <a class="dropdown-item" href="#">Tu día a día</a> -->
-                        </diV>
+                        </div>
 
                     </li>
                     <ul>
