modificacion en reservarclase.html

--- a/actividades.html
+++ b/actividades.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,11 +13,13 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans|Roboto+Slab&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
 </head>
+
 <body>
 
     <div class="header-page">
@@ -38,7 +41,7 @@
                     <span class="navbar-toggler-icon"></span></li>
         </ul>
 
-       
+
 
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
@@ -85,18 +88,26 @@
     <div class="container containeractividades">
 
         <h2>Taebo</h2>
-        <p>El taebo es una mezcla de boxeo con tae-kwon-do y aderezado con una coreografía que se realiza al ritmo de la música. ... Como indica su nombre, con el taebo se trabajan casi todas las partes del cuerpo, y es que es un deporte muy completo que nos sirve para mantener en forma nuestros grupos musculares</p>
+        <p>El taebo es una mezcla de boxeo con tae-kwon-do y aderezado con una coreografía que se realiza al ritmo de la
+            música. ... Como indica su nombre, con el taebo se trabajan casi todas las partes del cuerpo, y es que es un
+            deporte muy completo que nos sirve para mantener en forma nuestros grupos musculares</p>
 
-<h2>Crossfit</h2>
-<p>CrossFit se define como un sistema de entrenamiento de fuerza y acondicionamiento basado en ejercicios funcionales constantemente variados realizados a una alta intensidad.</p>
+        <h2>Crossfit</h2>
+        <p>CrossFit se define como un sistema de entrenamiento de fuerza y acondicionamiento basado en ejercicios
+            funcionales constantemente variados realizados a una alta intensidad.</p>
 
-<h2>Funcional</h2>
-<p>El Entrenamiento Funcional (Functional Training) es un entrenamiento personal muy efectivo, en el que se adaptan los ejercicios a las necesidades personales orientado a mejorar las funciones diarias y a aumentar la calidad de vida de quienes lo practican
-</p>
-<h2>Spinning</h2>
-<p>Es un ejercicio aeróbico y cardiovascular que se realiza sobre una bicicleta estática en el que se trabaja el tren inferior: las piernas y los glúteos. Su finalidad principal es perder peso y la tonificación de los músculos, además de mejorar la fuerza y la resistencia.</p>
-<h2>Musculación</h2>
-<p>La musculación es una actividad orientada a la tonificación y desarrollo muscular, mediante el uso de máquinas y pesas. Se consigue: Mejor salud física y mental.</p>
+        <h2>Funcional</h2>
+        <p>El Entrenamiento Funcional (Functional Training) es un entrenamiento personal muy efectivo, en el que se
+            adaptan los ejercicios a las necesidades personales orientado a mejorar las funciones diarias y a aumentar
+            la calidad de vida de quienes lo practican
+        </p>
+        <h2>Spinning</h2>
+        <p>Es un ejercicio aeróbico y cardiovascular que se realiza sobre una bicicleta estática en el que se trabaja el
+            tren inferior: las piernas y los glúteos. Su finalidad principal es perder peso y la tonificación de los
+            músculos, además de mejorar la fuerza y la resistencia.</p>
+        <h2>Musculación</h2>
+        <p>La musculación es una actividad orientada a la tonificación y desarrollo muscular, mediante el uso de
+            máquinas y pesas. Se consigue: Mejor salud física y mental.</p>
     </div>
 
 
@@ -145,7 +156,7 @@
                     <div class="modal-body">
                         <button data-dismiss="modal" class="close">&times;</button>
                         <div class="containerlogin">
-                            <div class="form-container sign-in-container">
+                            <div class="form-container log-in-container">
                                 <form class="form-group">
                                     <h1>Iniciar Sesión</h1>
                                     <input class="form-control" id="nombreLoginUsuario" type="text"
@@ -157,14 +168,14 @@
                                         onclick="iniciarSesion()">Ingresar</button>
                                 </form>
                             </div>
-                            <div class="overlay-container m-auto">
-                                <div class="overlay">
-                                    <div class="overlay-panel ">
+                            <div class="loginadmin-container m-auto">
+                                <div class="loginadmin">
+                                    <div class="loginadmin-panel ">
                                         <h1>¡Hola!</h1>
                                         <p>¿Eres administrador? Ingresa!</p>
-                                        <button onclick="location.href='admin.html'" class=" btn btn-secondary ghost" id="signUp">Ingresar</button>
-                                    
-                                       </div>
+                                        <button onclick="location.href='admin.html'" class=" btn btn-secondary ghost"
+                                            id="signUp">Ingresar</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -177,18 +188,20 @@
 
 
 
+
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"></script>
-<script src="js/ventanaAdministrador.js"></script>
-<script src="js/actividades.js"></script>
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+    <script src="js/ventanaAdministrador.js"></script>
+    <script src="js/actividades.js"></script>
 </body>
 
 </body>
+
 </html>
