--- a/nutricion.html
+++ b/nutricion.html
@@ -10,9 +10,9 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans|Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/principal.css">
     <link rel="stylesheet" href="css/footer.css">
@@ -118,15 +118,18 @@
 
         <p>Los nutrientes son aquellas sustancias presentes en los alimentos que metaboliza el organismo para funcionar.
             Existen varios tipos de nutrientes y todos cumplen su función específica. Una alimentación equilibrada es la
-            clave para mantener una buena salud. </p><p> Las proteínas son las encargadas de la formación y la regeneración
+            clave para mantener una buena salud. </p>
+        <p> Las proteínas son las encargadas de la formación y la regeneración
             del tejido muscular. También fortalecen nuestras defensas frente a infecciones y agentes externos y son las
-            encargadas de transportar otro tipo de nutrientes, como las grasas.</p><p>
+            encargadas de transportar otro tipo de nutrientes, como las grasas.</p>
+        <p>
 
 
             Las grasas y los hidratos de carbono tienen la función principal de obtener la energía necesaria para que el
             organismo pueda realizar funciones vitales como el bombeo de la sangre, el funcionamiento pulmonar o el
             correcto mantenimiento de la temperatura corporal. - Las vitaminas y los minerales regulan los procesos del
-            organismo para que funcionen correctamente y se eviten posibles trastornos y enfermedades. </p><p> La fibra
+            organismo para que funcionen correctamente y se eviten posibles trastornos y enfermedades. </p>
+        <p> La fibra
             promueve el buen funcionamiento de los sistemas de evacuación de residuos del organismo. Recientemente, la
             Sociedad Española de Nutrición (SENC) ha elaborado una nueva pirámide de la alimentación saludable. Además
             de especificar la proporción y los tipos de alimentos que debemos consumir en una dieta equilibrada, como
@@ -178,7 +181,7 @@
                     <div class="modal-body">
                         <button data-dismiss="modal" class="close">&times;</button>
                         <div class="containerlogin">
-                            <div class="form-container sign-in-container">
+                            <div class="form-container log-in-container">
                                 <form class="form-group">
                                     <h1>Iniciar Sesión</h1>
                                     <input class="form-control" id="nombreLoginUsuario" type="text"
@@ -190,14 +193,14 @@
                                         onclick="iniciarSesion()">Ingresar</button>
                                 </form>
                             </div>
-                            <div class="overlay-container m-auto">
-                                <div class="overlay">
-                                    <div class="overlay-panel ">
+                            <div class="loginadmin-container m-auto">
+                                <div class="loginadmin">
+                                    <div class="loginadmin-panel ">
                                         <h1>¡Hola!</h1>
                                         <p>¿Eres administrador? Ingresa!</p>
-                                        <button onclick="location.href='admin.html'" class=" btn btn-secondary ghost" id="signUp">Ingresar</button>
-                                    
-                                        </div>
+                                        <button onclick="location.href='admin.html'" class=" btn btn-secondary ghost"
+                                            id="signUp">Ingresar</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -207,6 +210,7 @@
             </div>
         </div>
     </div>
+
 
 
 
