--- a/nutricion.html
+++ b/nutricion.html
@@ -35,7 +35,7 @@
             <li> <a class="navbar-brand" href="index.html">INICIO</a>
         </ul>
         <ul>
-            <li> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            <li> <button style="background-color: #FF463F;" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span></li>
         </ul>
